syntax = "proto3";

package com.example.grpc_demo;
option java_multiple_files = true;

message Student {
    string id = 1;   
    string name = 2;
    string dob = 3;
    string address = 4;
    string phone = 5;
    string email = 6;
}

message CreateStudentRequest {
    Student student = 1;
}

message CreateStudentResponse {
    string message = 1;
}

message GetStudentRequest {
    string id = 1; 
}

message GetStudentResponse {
    Student student = 1; 
}

message UpdateStudentRequest {
    Student student = 1; 
}

message UpdateStudentResponse {
    string message = 1; 
}

message DeleteStudentRequest {
    string id = 1; 
}

message DeleteStudentResponse {
    string message = 1;
}

service StudentService {
    rpc CreateStudent (CreateStudentRequest) returns (CreateStudentResponse);
    rpc GetStudent (GetStudentRequest) returns (GetStudentResponse);
    rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentResponse);
    rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentResponse);
}
